<resources>
    <string name="app_name">Bodega Yasumi</string>
    <string name="detail_category">Home > Tecnología</string>
    <string name="detail_name">Consola PlayStation 5 825GB + Mando Dualsense blanco | Sony</string>
    <string name="detail_stock">¡Quedan 3 unidades!</string>
    <string name="detail_description">Juega sin límites con la nueva consola PlayStation 5 y asómbrate con los increíbles gráficos de una generación completamente nueva de juegos. Disfruta de la potencia de una CPU, una GPU y una SSD personalizadas con E/S integradas que
        redefinirán lo que una consola PlayStation puede hacer.</string>
    <string name="detail_price">S/ 4,699.00</string>
    <string name="detail_plus">+</string>
    <string name="detail_minus">-</string>
    <string name="detail_button__add">Add to cart</string>
    <string name="detail_button__shop">Comprar</string>
    <string name="detail_image__description">Imagen del producto</string>
    <string name="detail_quantity">1</string>
    <string name="body">This is a body text</string>
    <string name="title">Title</string>
    <string name="price">12.5</string>
    <string name="icono_text">Ícono para ir al detalle</string>
    <string name="nombre_text">Fanta 3L</string>
    <string name="marca_text">Gaseosa</string>
    <string name="imagen_text">Imagen del item</string>
    <string name="img_login">Imagen del login</string>
    <string name="login_txt">Login</string>
    <string name="password">Password</string>
    <string name="sign_out">Quiero registrarme</string>
    <string name="email_id">Email ID</string>
    <string name="sign_up">Ya tengo una cuenta</string>
    <string name="sign_up_text">Sign up</string>
    <string name="phone">Phone</string>
    <string name="femenino">Femenino</string>
    <string name="masculino">Masculino</string>
    <string name="quantity">Cantidad: 3</string>
    <string name="full_name">Full name</string>
    <string name="ic_user">Ícono del usuario</string>
    <string name="ic_register">Imagen del register</string>
    <string name="ic_delete">Ícono delete</string>
    <string name="ic_back">Ícono de retroceso</string>
    <string name="confirmar">Confirmar</string>
    <string name="txt_price">S/. 0.00</string>
    <string name="txt_total">Costo Total:</string>
    <string name="txt_shipping">Shipping:</string>
    <string name="txt_shipping_price">S/. 5.00</string>
    <string name="txt_subtotal">Sub Total:</string>
    <string name="txt_items">0 items</string>
    <string name="cart_title">My Cart</string>
    <string name="cart">Ver carrito</string>
    <string name="cono_de_retroceso">Ícono de retroceso</string>
    <string name="your_order">Your order</string>
    <string name="delivery_address">Delivery address</string>
    <string name="avenida_universitaria_3853">Avenida Universitaria 3853</string>
    <string name="change">Change</string>
    <string name="you_are_far_from_this_address">You are far from this address</string>
    <string name="at_delivery_point">At delivery point</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="_30_45_min">30 – 45 min</string>
    <string name="_40_60_min">45 - 60 min</string>
    <string name="payment_method">Payment method</string>
    <string name="changeasd">Change</string>
    <string name="b">B</string>
    <string name="debit_card">DEBIT CARD</string>
    <string name="alejandro_vargas">ALEJANDRO VARGAS</string>
    <string name="coupon">Coupon</string>
    <string name="add">Add</string>
    <string name="summary">Summary</string>
    <string name="order_details">Order details</string>
    <string name="products">Products</string>
    <string name="s_58_50">s/ 58.50</string>
    <string name="delivery_fee">Delivery fee</string>
    <string name="s_8_00">s/ 5.00</string>
    <string name="we_are_going_to_make_a_reservation_on_your_payment_method_when_you_order_is_delivered_we_will_charge_the_value_of_the_order">We are going to make a reservation on your payment method. When you order is delivered, we will charge the value of the order.</string>
    <string name="_1">1</string>
    <string name="place_order">Place Order</string>
    <string name="s_66_50">s/ 66.50</string>
    <string name="title_activity_change_map">ChangeMapActivity</string>
    <string name="cono_de_regreso">Ícono de regreso</string>
    <string name="MAPS_API_KEY">AIzaSyA77Wqwr9TzMvQdW0VBRzy-f29sTQvgqPU</string>
    <string name="lugar_de_destino_sin_selecci_n">Lugar de destino: Sin selección</string>
</resources>