<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="134dp"
            android:layout_height="134dp"
            android:layout_weight="1"
            android:contentDescription="@string/imagen_text"
            android:padding="16dp"
            app:srcCompat="@drawable/playstation5" />

        <LinearLayout
            android:id="@+id/linearText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="9">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_name"
                    android:textColor="@color/text"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/detail_price"
                    android:textColor="@color/text"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:contentDescription="@string/ic_delete"
                    app:srcCompat="@drawable/ic_delete" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>