<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".ItemDetail">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtCategoria"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:padding="8dp"
                android:text="@string/detail_category"
                android:textColor="@color/black_secondary"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="274dp"
                android:contentDescription="@string/detail_image__description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtCategoria"
                app:srcCompat="@drawable/playstation5" />

            <TextView
                android:id="@+id/txtNombreProducto"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/detail_name"
                android:textColor="@color/black_secondary"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <TextView
                android:id="@+id/txtStock"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                android:text="@string/detail_stock"
                android:textColor="@color/purple_700"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNombreProducto" />

            <TextView
                android:id="@+id/txtDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:maxLines="10"
                android:padding="8dp"
                android:text="@string/detail_description"
                android:textColor="@color/black_secondary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtStock" />

            <TextView
                android:id="@+id/txtPrecio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/detail_price"
                android:textColor="@color/black_secondary"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDescripcion" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/txtPrecio"
                tools:layout_editor_absoluteX="0dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnMenos"
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/bg_card"
                        android:onClick="decrementar"
                        android:shadowColor="@color/purple_700"
                        android:text="@string/detail_minus"
                        android:textAlignment="center"
                        android:textColor="@color/purple_700"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/txtQuantity"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:paddingTop="8dp"
                        android:text="@string/detail_quantity"
                        android:textAlignment="center"
                        android:textColor="@color/black_secondary"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/btnMas"
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/bg_card"
                        android:onClick="incrementar"
                        android:shadowColor="@color/purple_700"
                        android:text="@string/detail_plus"
                        android:textAlignment="center"
                        android:textColor="@color/purple_700"
                        android:textSize="24sp"
                        android:textStyle="normal" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnCart"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/detail_button__add"
                    android:textSize="16sp" />

            </LinearLayout>

<!--            <TextView-->
<!--                android:id="@+id/textView"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Prueba"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toStartOf="@+id/txtCategoria"-->
<!--                app:layout_constraintHorizontal_bias="0.0"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />-->

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_card"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnComprar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_baseline_arrow_right_alt_24"
            android:text="@string/detail_button__shop"
            android:textAlignment="center"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>